<resources>
    <string name="app_name">"Weekly Reminder"</string>
    <string name="action_settings">Settings</string>
    <string name="activity_main_approaching_events_list_item_button">UPDATE</string>
    <string name="activity_main_menu_add_event">"Add Event"</string>
    <string name="activity_add_event_checkbox_active">"Is active"</string>
    <string name="activity_add_event_checkbox_visible">"Show on widget"</string>
    <string name="activity_add_event_description">"Description"</string>
    <string name="activity_add_event_error_date">"Next occurrence has to be today or future date."</string>
    <string name="activity_add_event_error_date_format">"Next occurrence Date has to be in format: "</string>
    <string name="activity_add_event_error_no_name">"Event name is mandatory."</string>
    <string name="activity_add_event_error_name_exists">"Event of this name already exists."</string>
    <string name="activity_add_event_error_periodicity">"Periodicity has to be number from 1 to 9999 days."</string>
    <string name="activity_add_event_name">"Name"</string>
    <string name="activity_add_event_occurrence">"First occurrence"</string>
    <string name="activity_add_event_occurrence_button">"Change"</string>
    <string name="activity_add_event_periodicity">"Periodicity in days"</string>
    <string name="activity_add_event_submit_button">"Submit"</string>
    <string name="activity_add_event_instructions">"Fill out the event properties:"</string>
    <string name="activity_add_event_title">"Add Event"</string>
    <string name="activity_update_event_delete_dialog_title">"Delete Event"</string>
    <string name="activity_update_event_delete_dialog_text">"Event will be permanently deleted.\nProceed?"</string>
    <string name="activity_update_event_delete_delete_button">"Delete"</string>
    <string name="activity_update_event_note">"Note"</string>
    <string name="activity_update_event_accomplished_button">"Accomplish"</string>
    <string name="activity_update_event_accomplished_dialog_text">"Accomplish event and set new one to: "</string>
    <string name="activity_update_event_accomplished_dialog_title">"Accomplish confirmation"</string>
    <string name="activity_update_event_description_label">"Description"</string>
    <string name="activity_update_event_error_postpone_days">"Days has to be number from 1 to 9999 days."</string>
    <string name="activity_update_event_skip_dialog_text">"Skip event and set new one to: "</string>
    <string name="activity_update_event_skip_dialog_title">"Skip confirmation"</string>
    <string name="activity_update_event_postpone_dialog_text">"Postpone event and set new date to: "</string>
    <string name="activity_update_event_postpone_dialog_title">"Postpone confirmation"</string>
    <string name="activity_update_menu_delete_event">"Delete event"</string>
    <string name="activity_update_menu_modify_event">"Modify event"</string>
    <string name="activity_update_event_next_occurrence_label">"Next date"</string>
    <string name="activity_update_event_periodicity_label">"Periodicity"</string>
    <string name="activity_update_event_is_active_label">"Is active"</string>
    <string name="activity_update_event_is_widget_visible_label">"Widget visible"</string>
    <string name="activity_update_event_last_action_title">"Last action"</string>
    <string name="activity_update_event_no_last_action">"No event history yet"</string>
    <string name="activity_update_event_postpone_button">"Postpone"</string>
    <string name="activity_update_event_postpone_days">"days"</string>
    <string name="activity_update_event_skip_button">"Skip"</string>
    <string name="activity_update_event_title">"Update"</string>
    <string name="activity_update_event_show_history">"(click to view history)"</string>
    <string name="activity_event_history_action_accomplished">"Accomplished"</string>
    <string name="activity_event_history_action_postponed">"Postponed"</string>
    <string name="activity_event_history_action_skipped">"Skipped"</string>
    <string name="activity_event_history_title">"History of"</string>
    <string name="activity_modify_event_checkbox_active">"Is active"</string>
    <string name="activity_modify_event_checkbox_visible">"Show on widget"</string>
    <string name="activity_modify_event_description">"Description"</string>
    <string name="activity_modify_event_error_no_name">"Event name is mandatory."</string>
    <string name="activity_modify_event_error_name_exists">"Event of this name already exists."</string>
    <string name="activity_modify_event_error_periodicity">"Periodicity has to be number from 1 to 9999 days."</string>
    <string name="activity_modify_event_error_date">"Next occurrence has to be today or future date."</string>
    <string name="activity_modify_event_error_date_format">"Next occurrence Date has to be in format: "</string>
    <string name="activity_modify_event_name">"Name"</string>
    <string name="activity_modify_event_occurrence">"Next occurrence"</string>
    <string name="activity_modify_event_periodicity">"Periodicity in days"</string>
    <string name="activity_modify_event_submit_button">"Submit"</string>
    <string name="activity_modify_event_instructions">"Modify the event properties:"</string>
    <string name="activity_modify_event_title">"Modify"</string>
    <string name="dialog_cancel">"Cancel"</string>
    <string name="dialog_ok">"OK"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="appwidget_description">Reminder widget</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_hidden_item">***</string>
    <string name="click_to_change">(click to change)</string>
</resources>
